# Sensor-Fusion-for-Localization-Courseware

./: .gitignore
workspace/assignments/02-lidar-odometry-basic/src/lidar_localization/: .cproject  .project  CMakeLists.txt
workspace/assignments/02-lidar-odometry-basic/src/lidar_localization/config/front_end/: config.yaml
workspace/assignments/02-lidar-odometry-basic/src/lidar_localization/scripts/: icp_test_data.py
workspace/assignments/02-lidar-odometry-basic/src/lidar_localization/scripts/icp_exercise/: CMakeLists.txt
workspace/assignments/02-lidar-odometry-basic/src/lidar_localization/scripts/icp_exercise/include/: CeresDebugInfo.h  PoseInfo.h  icp.h  nanoflann_utils.h
workspace/assignments/02-lidar-odometry-basic/src/lidar_localization/scripts/icp_exercise/src/: CeresDebugInfo.cpp  icp.cpp  main.cpp
workspace/assignments/03-lidar-odometry-advanced/src/lidar_localization/: CMakeLists.txt
workspace/assignments/04-mapping-and-matching/src/lidar_localization/: CMakeLists.txt
workspace/assignments/05-imu-calib/src/imu_tk/src/: calibration.cpp
workspace/assignments/06-imu-navigation/src/gnss_ins_sim/src/: imu_gen.py  imu_integration.py  poseinfo.py  publisher_node.py  test_imu_integration.py  test_imu_integration2.py
workspace/assignments/07-filtering-basic/src/gnss_ins_sim/config/: recorder_virtual_proving_ground.yaml
workspace/assignments/07-filtering-basic/src/gnss_ins_sim/src/: demo_no_algo.py  recorder_node.py
workspace/assignments/07-filtering-basic/src/lidar_localization/: CMakeLists.txt
workspace/assignments/07-filtering-basic/src/lidar_localization/launch/: gnss_ins_sim_localization.launch
workspace/assignments/08-filtering-advanced/src/lidar_localization/: CMakeLists.txt
workspace/assignments/09-graph-optimization/src/lidar_localization/: CMakeLists.txt
workspace/assignments/10-sliding-window/src/lidar_localization/: CMakeLists.txt
workspace/assignments/10-sliding-window/src/lidar_localization/cmake/: protobuf.cmake
(+37 files in other folders)
